# ECE444_project

clock/: sdkconfig  sdkconfig.old
i2c/: sdkconfig
i2c/main/: CMakeLists.txt  INA209.c  INA209.h  comm.c  comm.h  main.c
master/: CMakeLists.txt  Makefile  partition_table.csv  sdkconfig  sdkconfig-rest  sdkconfig.old
master/front/web-demo/: package.json
master/front/web-demo/src/: App.vue  router.js
master/front/web-demo/src/views/: Chart.vue  Home.vue
master/include/: filesystem.h  modbus.h  modbus_tasks.h  rest_server.h  services.h
master/main/: CMakeLists.txt  Kconfig.projbuild  filesystem.c  main.c  modbus.c  modbus_tasks.c  rest_server.c  services.c  tcp_master.c
rest/: CMakeLists.txt  sdkconfig  sdkconfig.old
rest/front/web-demo/src/: store.js
rest/front/web-demo/src/views/: Chart.vue
rtu/: CMakeLists.txt  sdkconfig  sdkconfig.old
rtu/include/: INA209.h  MD08A.h  actuators.h  i2c.h  modbus.h  sensors.h  services.h
rtu/main/: CMakeLists.txt  INA209.c  Kconfig.projbuild  MD08A.c  i2c.c  main.c  modbus.c  sensors.c  services.c  tcp_slave.c
